align fix

--- a/src/app/products/product-list.component.css
+++ b/src/app/products/product-list.component.css
@@ -14,3 +14,6 @@ button {
   background-color: transparent;
   border: 2px solid #fff;
 }
+tr {
+  text-align: left;
+}
